# squid-ecap-gzip

./: .gitattributes  AUTHORS  ChangeLog  LICENSE  Makefile.am  Makefile.in  README  README.md  aclocal.m4  configure  configure.ac  create_logs.sh
.github/workflows/: codeql-analysis.yml
src/: Makefile.am  Makefile.in  adapter_gzip.cc  adapter_gzip.h.in  autoconf.h.in
